# staszic-lang

./: .gitignore
00-about/: ogłoszenie.md  overview.md  overview_1.md
01-project_setup/: CMakeLists.txt  overview.md
01-project_setup/inc/hello/: hello.h  hello.hpp
01-project_setup/src/: CMakeLists.txt  main.cc  main.cpp
01-project_setup/src/hello/: hello.cc  hello.cpp
02-libraries_and_tests/: CMakeLists.txt
02-libraries_and_tests/inc/hello/: hello.h  hello.hpp
02-libraries_and_tests/src/: CMakeLists.txt
02-libraries_and_tests/src/hello/: CMakeLists.txt  hello.cc  hello.cpp
02-libraries_and_tests/tests/: CMakeLists.txt
02-libraries_and_tests/tests/hello/: CMakeLists.txt  hello.cpp
03-language_syntax/: syntax.txt
04-source_module/src/: CMakeLists.txt
04-source_module/src/source/: string.cpp
04-source_module/tests/: CMakeLists.txt
06-lexer/: README.md
06-lexer/src/: CMakeLists.txt
07-parser-module/src/: CMakeLists.txt  main.cpp
08-visitor-pattern/: main.cpp  nodes.hpp  uptr.hpp  visitor.hpp
09-repl/inc/: repl.hpp
09-repl/src/: CMakeLists.txt  main.cpp
10-repl/: CMakeLists.txt
10-repl/inc/parser/: nodes.hpp
10-repl/inc/source/: string.hpp
10-repl/inc/visitor/: eval.hpp
10-repl/src/: CMakeLists.txt  main.cpp  repl.cpp
10-repl/src/lexer/: CMakeLists.txt  lexer.cpp
10-repl/src/parser/: CMakeLists.txt  ast.cpp  nodes.cpp
10-repl/src/visitor/: eval.cpp
10-repl/tests/: CMakeLists.txt
10-repl/tests/lexer/: CMakeLists.txt  lexer_tests.cpp
10-repl/tests/source/: CMakeLists.txt  string_tests.cpp
presentations/: links.md
(+15 files in other folders)
